updated :  user onboarding process
