# src/api/model/index.ts
@@ -40,6 +40,7 @@ export * from "./formSettingsVisibility";
 export * from "./formStatus";
 export * from "./formSubmissionResponse";
 export * from "./formSubmissionResponseResultsItem";
+export * from "./getApiV1AuthVerifyOtpParams";
 export * from "./getApiV1FormsFormIdVisibility200";
 export * from "./getApiV1FormsFormIdVisibility200Visibility";
 export * from "./getApiV1FormsReceivedMode";
@@ -132,3 +133,6 @@ export * from "./userOrgId";
 export * from "./userRolesResponse";
 export * from "./usersByOrgResponse";
 export * from "./usersByOrgResponseUsers";
+export * from "./verifyOtpResponse";
+export * from "./setPasswordRequest";
+export * from "./setPasswordResponse";
